# tleme

./: README.md  pyproject.toml
data/: satellites.tle
src/tleme/: __init__.py  app.py  celestrak.py  settings.py  util.py
